@@ -35,6 +35,36 @@
 <?php } ?>
 <br />
 
+<?php switch($_SESSION['LANG']) {
+        case 'fr_FR': 
+                echo '<script type="text/javascript" src="main/libs/js/jquery.ui.datepicker-fr.js"></script>'; 
+                break;
+        case 'it_IT':
+                echo '<script type="text/javascript" src="main/libs/js/jquery.ui.datepicker-it.js"></script>';
+                break;
+        case 'de_DE':
+                echo '<script type="text/javascript" src="main/libs/js/jquery.ui.datepicker-de.js"></script>';
+                break;
+        case 'es_ES':
+                echo '<script type="text/javascript" src="main/libs/js/jquery.ui.datepicker-es.js"></script>';
+                break;
+        }
+?>
+
+
+<script>
+$(function() {
+   $("#calendar_startdate").datepicker({ 
+dateFormat: "yy-mm-dd",
+showButtonPanel: true,
+showOn: "both",
+buttonImage: "../../main/libs/img/datepicker.png",
+buttonImageOnly: 'true',
+<?php echo "buttonText: '".__('TIMEPICKER_BUTTON_TEXT_LOG')."',"; ?>
+}).val()
+});
+</script>
+
 <script>
 
 
@@ -340,6 +370,8 @@
 
 </script>
 
+<label class="title_conf"><?php echo __('CALENDAR_TITLE'); ?></label>
+
 <div id='calendar'></div>
 
 <div id="dialog_edit" title="<?php echo __('WHAT_DIALOG_CALENDAR'); ?>" style="display:none">
@@ -445,6 +477,44 @@
 <p><?php echo __('RESET_CONFIRM_CALENDAR'); ?></p>
 </div>
 <br />
+
+<label class="title_conf"><?php echo __('CALENDAR_ENGRAIS'); ?></label>
+<form name="create_calendar_program" id="create_calendar_program" action="calendar-<?php echo $_SESSION['SHORTLANG']; ?>" method="post">
+<table class="table_width">
+<tr>
+    <td class="calendar-marge"></td>
+    <td class="calendar-title"><?php echo __('CALENDAR_SUBSTRAT'); ?>:</td>
+    <td class="calendar-field">
+        <select name="substrat" id="substrat">
+            <?php foreach($substrat as $sub) { ?>
+                <option name="<?php echo $sub; ?>" value="<?php echo $sub; ?>"><?php echo $sub; ?></option>
+            <?php } ?>
+        </select>
+    </td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td><?php echo __('CALENDAR_PROGRAM'); ?>:</td>
+    <td>
+        <select name="product" id="product">
+             <?php foreach($product as $prod) { ?>
+                <option name="<?php echo $prod; ?>" value="<?php echo $prod; ?>"><?php echo $prod; ?></option>
+            <?php } ?>
+        </select>
+    </td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td><?php echo __('CALENDAR_STARTDATE'); ?>:</td>
+    <td><input id="calendar_startdate" name="calendar_startdate" type="text" class="whitefield" size="10" value="<?php echo $calendar_start; ?>"></td>
+    <td><div id="error_calendar_startdate" style="display:none" class="error_field"><img src='/cultibox/main/libs/img/arrow_error.png' alt=''><?php echo __('ERROR_FORMAT_CALENDAR_DATE'); ?></div></td>
+</tr>
+</table>
+<p class="p_center"><input type="submit" id="calendar-program" name="calendar-program" value="<?php echo __('CREATE_CALENDAR_PROGRAM'); ?>"></p>
+</form>
+
 
 
 
